# Kurs_6_DZ_21.1

./: .env  .env.exampl  README.md  blog.json  catalog.json  db.json  pyproject.toml  users.json
blog/: form.py  models.py  urls.py  views.py
blog/functions/: utils.py
blog/migrations/: 0001_initial.py  0002_blog_content_blog_title.py  0003_blog_created_at_blog_is_published_blog_photo_and_more.py  0004_alter_blog_created_at.py  0005_alter_blog_created_at.py  0006_alter_blog_created_at.py  0007_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  form.py  models.py  services.py  urls.py  views.py
catalog/function/: work_with_file.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_alter_product_created_at.py  0004_alter_product_created_at_alter_product_updated_at.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py  0007_alter_product_options.py  0008_alter_product_options.py  0009_alter_product_options.py  0010_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contact.html  contact_form.html  contact_list.html  detail_product.html  home.html  home_1.html  home_2.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
version/: admin.py  apps.py  models.py
version/migrations/: 0001_initial.py
(+10 files in other folders)
